--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Zovie</title>
+    <title>Movie</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
       <a href="index.html">
-        <h1 class="logo">Z<span class="logocolor">ovie</span></h1>
+        <h1 class="logo"><span class="logocolor">Movie</span></h1>
       </a>
       <form id="form" onsubmit="searchMovie(event)">
         <input type="text" id="search" class="search" placeholder="Search..." />
